--- a/trunk/CR_JumpToNamedMVCView/CR_JumpToNamedMVCView/CR_JumpToNamedMVCView.vbproj
+++ b/trunk/CR_JumpToNamedMVCView/CR_JumpToNamedMVCView/CR_JumpToNamedMVCView.vbproj
@@ -64,7 +64,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DevExpress.CodeRush.Library, Version=12.1.5.0, Culture=neutral, PublicKeyToken=e1a72e979dafdca7, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeRush.Library, Version=12.1.5.0, Culture=neutral, PublicKeyToken=e1a72e979dafdca7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
