--- a/CR_MetricShader/CR_MetricShader/CR_MetricShaderVSIX.vbproj
+++ b/CR_MetricShader/CR_MetricShader/CR_MetricShaderVSIX.vbproj
@@ -56,6 +56,7 @@
     <DocumentationFile>CR_MetricShader.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <DeployExtension>False</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
